--- a/src/ResizableTable.css
+++ b/src/ResizableTable.css
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 1200px; /* Set fixed width */
-  height: 800px; /* Set fixed height */
+  width: 1100px; /* Set to the width of your table in the image */
+  height: 800px; /* Set to the height of your table in the image */
 }
 
 .table-image {
@@ -19,35 +19,4 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 90%; /* Ensure it matches the container */
-  height: 90%; /* Ensure it matches the container */
-}
-
-th,
-td {
-  position: relative;
-}
-
-.resize-handle {
-  position: absolute;
-  background-color: red;
-}
-
-.resize-handle.right {
-  right: 0;
-  top: 0;
-  width: 5px;
-  height: 100%;
-  cursor: ew-resize;
-}
-
-.resize-handle.bottom {
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 5px;
-  cursor: ns-resize;
 }
