columns working with resizable

--- a/src/ResizableTable.css
+++ b/src/ResizableTable.css
@@ -26,3 +26,19 @@
   padding: 0;
   margin: 0;
 }
+
+.resizeLine{
+  position: absolute; 
+  height: 100%;
+  width: 4px;
+  top: 0;
+  right: -2px;
+  cursor: col-resize;
+  &:hover{
+    background-color: #0AA1DD;
+  }
+  &:active {
+    background-color: #0AA1DD;
+
+  }
+}
